<resources>
    <string name="app_name">MyLive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="email">Email address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity level</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>
    <string name="measurement">Measure</string>
    <string name="cm">cm</string>
    <string name="feetInches">Feet inches </string>
    <string name="kg">kg</string>
    <string name="pounds">pounds</string>
    <string name="weekly_goal">Weekly goal</string>
    <string name="i_want_to_lose">I want to loose</string>
    <string name="i_want_to_gain">I want to gain</string>
    <string name="i_want_to">I want to</string>
    <string name="kg_each_week">kg each week</string>
    <string name="pounds_each_week">pounds each week</string>


    <!--    <string-array name="array_weekly_goal">-->
    <!--        <item> loose weight</item>-->
    <!--        <item> gain weight</item>-->
    <!--    </string-array>-->

    <string-array name="array_weekly_goal_kg">
        <item> reach the goal carefully</item>
        <item> reach the goal quickly</item>
        <!--        <item>0.5</item>-->
        <!--        <item>1</item>-->
        <!--        <item>1.5</item>-->
        <!--        <item>2</item>-->
        <!--        <item>2.5</item>-->
        <!--        <item>3</item>-->
    </string-array>

    <string-array name="array_weekly_goal_b">
        <item>kg each week</item>
        <item>pounds each week</item>
    </string-array>

    <string-array name="array_activity_level">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>


    <string-array name="array_measurements">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string-array name="array_months">
        <item>January </item>
        <item>February </item>
        <item>March </item>
        <item>April </item>
        <item>May </item>
        <item>June </item>
        <item>July </item>
        <item>August </item>
        <item>September </item>
        <item>November </item>
        <item>December </item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>


    <string name="blank"></string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="menu_goal">Goal</string>
    <string name="category">Category</string>
    <string name="food">Food</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="parent">Parent</string>
    <string name="edit">Edit</string>
    <string name="delete_message">Are you sure, you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="calories_table">Calories table</string>
    <string name="description">Description </string>
    <string name="about">About </string>
    <string name="manufacture">Manufacture</string>
    <string name="per_hundred">per 100 g</string>
    <string name="per_N">per N g</string>
    <string name="general">General</string>
    <string name="serving">Serving</string>
    <string name="size">Size</string>
    <string name="number">Number</string>
    <string name="word">Word</string>
    <string name="barcode">Barcode</string>
    <string name="save">Save</string>
    <string name="main">Main</string>
    <string name="sub">Sub</string>
    <string name="_100">100</string>
    <string name="status">Status</string>
    <string name="user_weight">user_weight</string>
    <string name="user_target_weight">user_target_weight</string>
    <string name="method">Method</string>
    <string name="user_method">User method</string>
    <string name="user_activity">User activity</string>
    <string name="advanced">Advanced</string>
    <string name="without_activity">Without activity</string>
    <string name="to_loose_weight">To loose weight</string>
    <string name="with_activity">With activity</string>
    <string name="to_keep_weight">To keep weight</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="portion_size">Portion size</string>
    <string name="gram">g</string>
    <string name="pcs">PCS</string>
    <string name="submit">Submit</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="supper">Supper</string>
    <string name="snacks">Snacks</string>
    <string name="goal_with_activity">Goal with activity</string>
    <string name="eaten">Eaten</string>
    <string name="sum">Sum</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <string name="menu_home">Home</string>
    <string name="select_meal">Select meal</string>
    <string name="unlink">unlink</string>
    <string name="error">Error</string>
    <string name="digits">Digits</string>
    <string name="nickname">Nickname</string>
    <string name="goal">Goal</string>
    <string name="remained">Remained</string>
    <string name="left">Left</string>
    <string name="add_meal">Add meal</string>
    <string name="meal_name">Meal name</string>
    <string name="meal_name_error">Meal name should\'t be empty</string>
    <string name="per_meal">Per meal</string>
    <string name="per_portion">Per portion</string>
    <string name="additional">Additional</string>
    <string name="_1">1</string>
    <string name="portion">portion</string>
    <string name="hi">Hi, %s :)\n%s</string>
    <string name="total_components"> total proteins: %s, total carbs:  %s, total fat:  %s </string>
    <string name="components"> proteins: %s, carbs:  %s, fat:  %s </string>
    <string name="write_name_of_food">write name of food here</string>

    <string name="format_kcal">%s kcal</string>
    <string name="format_g">%s g</string>

    <string name="format_progress_kcal">%s/%s kcal</string>
    <string name="format_progress_g">%s/%s g</string>
    <string name="nickname_">NickName*</string>

    <string name="format_double">%.1f</string>
    <string name="height_">Height*</string>
    <string name="weight_">Weight*</string>
    <string name="obligatory_fields">* - obligatory fields</string>
    <string name="target_weight_">Target weight *</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="press_here_to_register"><u>Press here to register</u></string>
    <string name="password">Password</string>
    <string name="error_nickname_or_password">Error:Nick name or password is incorrect</string>
    <string name="password_">Password*</string>

    <string name="format_long">%d</string>
    <string name="log_out"><u>Press here to log out</u></string>
    <string name="formula_mifflin">** All calculations are carried out using the Mifflin St. Jeor formula, make sure that it is suitable for you</string>

</resources>