<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewBreakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/breakfast"
        style="@style/Widget.TextViewBig"/>

    <TextView
        android:id="@+id/textViewLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/Widget.TextViewBig"
        android:text="@string/lunch" />
        <TextView
            android:id="@+id/textViewSupper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.TextViewBig"
            android:text="@string/supper" />
        <TextView
            android:id="@+id/textViewSnacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.TextViewBig"
            android:text="@string/snacks" />

</LinearLayout>
</ScrollView>