<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/bg_all"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <!-- General table -->
        <TextView
            android:id="@+id/textViewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/general"
            style="@style/Widget.TextViewBig" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <!-- HeadLine -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <TextView
                    android:id="@+id/textViewFoodName"
                    style="@style/Widget.TextViewSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/name"
                    />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/Widget.EditTextBlankBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name" />
            </TableRow>
            <!-- //HeadLine -->

            <!-- Category -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewCategory"
                    style="@style/Widget.TextViewSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/category"
                    android:textSize="18sp" />

                 </TableRow>
            <!-- //Category -->

            <!-- Main Category -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewMainCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/main"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerMainCategory"
                    style="@style/Widget.SpinnerBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <!-- // Main Category -->
            <!-- Sub Category -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewSubCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sub"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerSubCategory"
                    style="@style/Widget.SpinnerBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <!-- // Sub Category -->
        </TableLayout>
        <!-- // General table -->

        <!-- Serving  table -->
        <TextView
            android:id="@+id/textViewServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serving"
            style="@style/Widget.TextViewBig" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Size & Measurement -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewFoodSize"
                    style="@style/Widget.TextViewSimple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/size"
                    />

                <EditText
                    android:id="@+id/editTextServingSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:text="@string/_100"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/editTextServingMeasurement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:ems="6"
                    android:text="@string/gram"
                    android:hint="@string/measurement" />
            </TableRow>
            <!-- // Size & Measurement -->

            <!-- Number & Word -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewFoodNumber"
                    style="@style/Widget.TextViewSimple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/number"
                    />

                <EditText
                    android:id="@+id/editTextServingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:inputType="numberDecimal"
                    android:text="@string/_1"
                    android:hint="@string/number" />

                <EditText
                    android:id="@+id/editTextServingWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    style="@style/Widget.EditTextBlankBlue"
                    android:text="@string/portion"
                    android:hint="@string/measurement" />
            </TableRow>
            <!-- // Number & Word -->
        </TableLayout>
        <!-- // Serving table -->

        <!-- Calories table -->
        <TextView
            android:id="@+id/textViewCaloriesTable"
            style="@style/Widget.TextViewBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories_table"
             />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_meal_table"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <!-- Hat of the table -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewFoodBlank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.TextViewForTable"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewFoodEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.TextViewForTable"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewFoodProteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.TextViewForTable"
                    android:text="@string/protein" />

                <TextView
                    android:id="@+id/textViewFoodCarbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.TextViewForTable"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewFoodFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.TextViewForTable"
                    android:text="@string/fat" />
            </TableRow>
            <!-- // Hat of the table -->
            <!-- Per N -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewFoodBlankPerPortion"
                    style="@style/Widget.TextViewForTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/per_portion"
                    android:layout_weight="1" />


                <EditText
                    android:id="@+id/editTextFoodEnergyPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:ems="2"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/_100" />

                <EditText
                    android:id="@+id/editTextFoodProteinsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:ems="2"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/_100" />

                <EditText
                    android:id="@+id/editTextFoodCarbsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:ems="2"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/_100"/>

                <EditText
                    android:id="@+id/editTextFoodFatPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.EditTextBlankBlue"
                    android:ems="2"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/_100" />
            </TableRow>
            <!-- // Per N -->


        </TableLayout>
        <!-- //  Calories table -->

        <!-- General table -->
        <TextView
            android:id="@+id/textViewAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/additional"
            style="@style/Widget.TextViewBig" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Manufacture -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          >

            <TextView
                android:id="@+id/textViewManufacture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                style="@style/Widget.TextViewSimple"
                android:text="@string/manufacture"
             />

            <EditText
                android:id="@+id/editTextManufacture"
                style="@style/Widget.EditTextBlankBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/manufacture" />
        </TableRow>
        <!-- // Manufacture -->

        <!-- Description -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.TextViewSimple"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextDescription"
                style="@style/Widget.EditTextBlankBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description" />
        </TableRow>
        <!-- // Description -->

        <!-- Barcode -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <TextView
                android:id="@+id/textViewBarcode"
                style="@style/Widget.TextViewSimple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextBarcode"
                style="@style/Widget.EditTextBlankBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/barcode" />
        </TableRow>
        </TableLayout>
        <!-- //Barcode -->

        <!-- Save button -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/save"
            android:layout_marginBottom="70dp"
            style="@style/Widget.MyButton"/>
        <!-- // Save button -->




    </LinearLayout>

</ScrollView>