<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewFoodManufactureName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <!-- Pcs -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewPortionSizePCS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portion_size" />

                <EditText
                    android:id="@+id/editTextServingSizePcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textViewServingSizePcsMeasurement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

            </TableRow>
            <!--// Pcs -->
            <!-- Gram -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textViewPortionSizeGram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portion_size" />

                <EditText
                    android:id="@+id/editTextServingSizeGram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewServingSizeMeasurement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gram" />

            </TableRow>
            <!--// Gram -->

        </TableLayout>

        <!-- Buttons -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <!-- Hat of the table -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">


                <!-- HeadLine -->
                <Button
                    android:id="@+id/buttonSubmitEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit" />

                <Button
                    android:id="@+id/buttonSubmitDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unlink" />


            </TableRow>

        </TableLayout>
        <!--// Buttons -->

    </LinearLayout>

</ScrollView>